# ffmpeg-voice-vox

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.json  css_patch.css  default_config.json  install.bat  pyproject.toml  requirements.txt  resolve_status_debug.txt  run.py  run_checks.bat  server.py  test_conflict.py  voicevox_controller.py
.agent/rules/: basic.md
app/: __init__.py  config.py  schemas.py
app/config/: __init__.py  manager.py
app/core/: audio.py  capture.py  database.py  dependencies.py  events.py  ffmpeg.py  processor.py  resolve.py  transcription.py  voicevox.py
app/services/: config_service.py  control_service.py  processor.py  system_service.py
doc/: control_logic.md  specifications.md  structure.md
docs/: setup.md
scripts/: debug_dll.py  run_tests.py
templates/: index.html
tests/: Snap Captions.lua  reproduce_issue.py  test_api_id_handling.py  test_audio.py  test_browser_launch.py  test_command_logic.py  test_config_comprehensive.py  test_config_manager.py  test_config_migration.py  test_config_pydantic.py  test_config_robustness.py  test_config_schema.py  test_config_sync.py  test_database_persistence.py  test_db_id_dynamic.py  test_filename_hash.py  test_frontend_sync.py  test_history_loading.py  test_history_order.py  test_log_consistency.py  test_logs.py  test_negative_duration.py  test_resolve_clips.py  test_resolve_core.py  test_resolve_toggle.py  test_srt_generation.py  test_sse_events.py  test_voicevox_integration.py  test_voicevox_logic.py  test_webui_integration.py  verify_422_response.py
(+36 files in other folders)
